# openscope-rl

./: .gitignore  ANALYSIS_SUMMARY.md  AUTORESTART_GUIDE.md  CLAUDE.md  ERROR_ANALYSIS.md  EXPERIMENT_ROADMAP.md  FIXES.md  HEADLESS_MODE_FIX.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  OPENSCOPE_SOURCE_ANALYSIS.md  QUICKSTART.md  QUICK_START.md  README.md  README_DECISION_TRANSFORMER.md  README_EXPERIMENTS.md  SETUP_COMPLETE.md  TDMPC2_REVIEW.md  TESTING.md  TMUX_GUIDE.md  WSL_DISPLAY_FIX.md  benchmark_speed.py  check_training_gpu.py  diagnose_crash.py  evaluate.py  evaluate_sb3.py  monitor_gpu.py  openscope_rl_demo.ipynb  openscope_rl_selfcontained.ipynb  openscope_simple_demo.ipynb  pyproject.toml  requirements.txt  run_example.sh  setup.sh  start_xvfb.sh  test_env.py  test_sb3_integration.py  train.py  train_sb3.py  (+4 more)
.claude/skills/commit-helper/: SKILL.md
.cursor/: worktrees.json
algorithms/: __init__.py  ppo.py
config/: SPEED_COMPARISON.md  stable_fast_config.yaml  test_config.yaml  training_config.yaml  ultra_fast_config.yaml
data/: __init__.py  cosmos_collector.py  offline_dataset.py  training_data_collector.py
docs/: BRANCH_ANALYSIS.md  GAP_ANALYSIS_SUPPLEMENTARY.md  OPENSCOPE_GAP_ANALYSIS.md  OPENSCOPE_SETUP_FINAL.md
environment/: STATEPROCESSOR_EVALUATION.md  __init__.py  action_masking.py  action_space_wrapper.py  config.py  constants.py  cosmos_env.py  curriculum.py  exceptions.py  game_interface.py  interface.py  metrics.py  openscope_env.py  playwright_env.py  playwright_env_old.py  reward_calculator.py  spaces.py  state_processor.py  utils.py  wrappers.py
experiments/: __init__.py  benchmark.py  metrics.py  performance_benchmark.py  visualization.py
models/: __init__.py  config.py  decision_transformer.py  encoders.py  heads.py  hierarchical_policy.py  multi_agent_policy.py  networks.py  sb3_policy.py  tdmpc2.py  trajectory_transformer.py
notebooks/: 00_explore_openscope_api.ipynb  01_baseline_ppo_demo.ipynb  02_hierarchical_rl_demo.ipynb  03_behavioral_cloning_demo.ipynb  04_multi_agent_demo.ipynb  05_decision_transformer_demo.ipynb  06_trajectory_transformer_demo.ipynb  07_cosmos_world_model_demo.ipynb  08_simple_world_model_demo.ipynb  09_cql_offline_rl_demo.ipynb  10_dreamerv3_demo.ipynb  11_tdmpc2_demo.ipynb  MISSING_DATA_ANALYSIS.md  _wandb_utils.py  ppo_baseline_sweep.yaml  test_data_extraction.ipynb
notebooks/openscope_api_extraction/: complete_extraction.json  property_summary.json
notebooks/tensorboard_logs/PPO_1/: events.out.tfevents.1761782126.Mac.53005.0
notebooks/tensorboard_logs/PPO_2/: events.out.tfevents.1761783397.Mac.57163.0
notebooks/tensorboard_logs/PPO_3/: events.out.tfevents.1761796959.Mac.89180.0
poc/: JUPYTER_FIX.md  README.md  SIMPLIFICATION_SUMMARY.md  atc_2d_demo.ipynb  atc_3d_demo.ipynb  dict_to_multidiscrete_wrapper.py  openscope_rl_demo.ipynb  openscope_rl_selfcontained.ipynb  realistic_3d_sweep.yaml  simple_2d_sweep.yaml  test_env.py  test_jupyter_compat.py  test_notebook_compat.py
poc-self-contained/: OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  optimized_demo.py  realistic_3d_atc.ipynb  simple_2d_atc.ipynb  simple_2d_atc_env.py  simple_2d_atc_optimized.ipynb  simple_optimized_demo.py  test_environments.py
poc/atc_rl/: __init__.py  constants.py  environment_2d.py  environment_3d.py  environment_old.py  physics.py  player.py  recorder.py  rendering.py  visualization_old.py  wandb_utils.py
poc/environment/: openscope_env.py
poc/models/: __init__.py
results/: results_20251029_172641.json  results_20251029_172745.json
scripts/: cleanup_worktrees.sh  create_worktree.sh  demo_env.py  evaluate_model.py  list_worktrees.sh  setup_improvement_worktrees.sh  setup_worktrees.sh  smoke_test.py  smoke_test_tdmpc2.py
tests/: README.md  __init__.py  conftest.py  test_data_extraction.py  test_interface_abstraction.py  test_model_data_requirements.py  test_openscope_integration.py
training/: __init__.py  bc_rl_hybrid.py  behavioral_cloning.py  config_logger.py  cosmos_finetuner.py  cosmos_rl_trainer.py  cql_trainer.py  dt_trainer.py  hierarchical_trainer.py  hyperparam_tuner.py  mappo_trainer.py  ppo_trainer.py  rule_based_expert.py  tdmpc2_planner.py  tdmpc2_trainer.py  tt_planner.py  tt_trainer.py  world_model_trainer.py
utils/: __init__.py  curriculum.py  curriculum_callback.py  logger.py
