[project]
name = "openscope-rl"
version = "0.1.0"
description = "Reinforcement Learning training system for OpenScope air traffic control simulator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "OpenScope RL Team" }
]
keywords = ["reinforcement-learning", "air-traffic-control", "ppo", "transformer", "stable-baselines3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML libraries
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    # Reinforcement Learning
    "stable-baselines3[extra]>=2.0.0", # PPO + extras (tensorboard, rich, etc.)
    # Game interface
    "playwright>=1.40.0",
    # Configuration Management
    "hydra-core>=1.3.0",
    "pydantic>=2.0.0",
    # Experiment Tracking
    "wandb>=0.16.0",
    # Utilities
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.8.0",
    # Jupyter support
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    # Tensor operations and visualization
    "einops>=0.7.0",
    "torchinfo>=1.8.0",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
train-openscope = "train_sb3:main"
eval-openscope = "evaluate_sb3:main"

[project.urls]
Homepage = "https://github.com/openscope/openscope"
Documentation = "https://github.com/openscope/openscope/tree/develop/documentation"
Repository = "https://github.com/openscope/openscope"
Issues = "https://github.com/openscope/openscope/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment", "models", "utils"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in argument defaults
    "N803",  # argument name should be lowercase (conflicts with PyTorch convention)
    "E722",  # bare except (sometimes needed for resilience)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"*.ipynb" = ["E402"]  # Jupyter notebooks have imports throughout
"test_*.py" = ["E402"]  # Test files can have inline imports
"verify_*.py" = ["E722"]  # Verification scripts can use bare except

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
